--- a/1_Client_Side_Form_Design_and_Validation/form_validation.html
+++ b/1_Client_Side_Form_Design_and_Validation/form_validation.html
@@ -1,1 +1,26 @@
-This is a placeholder for form_validation.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Registration Page</title>
+</head>
+<body>
+<h2>Registration Page</h2>
+<form action="/register" method="post" enctype="multipart/form-data">
+<label for="username">Username:</label>
+<input type="text" id="username" name="username" required><br><br>
+<label for="password">Password:</label>
+<input type="password" id="password" name="password" required><br><br>
+<label for="gender">Gender:</label>
+<input type="radio" id="male" name="gender" value="male" required>
+<label for="male">Male</label>
+<input type="radio" id="female" name="gender" value="female" required>
+<label for="female">Female</label><br><br>
+<label for="hobbies">Hobbies:</label><br>
+<input type="checkbox" id="sports" name="hobbies" value="sports">
+<label for="sports">Sports</label><br>
+<input type="checkbox" id="music" name="hobbies" value="music">
+<label for="music">Music</label><br>
+<input type="checkbox" id="reading" name="hobbies" value="reading">
+<label for="reading">Reading</label><br><br>
